<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digital.currency.price.About"
    android:theme="@style/AboutTheme"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <!-- Logo and name -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/about_coin_price"
                android:layout_gravity="center"
                android:contentDescription="@string/logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textColor="#FFF"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>
            <!-- Version -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/versionLG"
                    android:textColor="#FFF"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="#FFF"/>
            </LinearLayout>
            <!-- Sort app description -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutDesc"
                    android:textSize="18sp"
                    android:textColor="#FFF"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textSize="18sp"
                    android:textColor="#FFF"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <!-- Contact , share and play store account-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="50dp"
                    tools:ignore="UselessParent">
                    <ImageView
                        android:id="@+id/share"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_share_50"
                        android:layout_margin="10dp"
                        android:onClick="shareApp" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_mail_50"
                        android:layout_margin="10dp"
                        android:onClick="mailToD"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_playstore_50"
                        android:layout_margin="10dp"
                        android:onClick="appStore"
                        android:contentDescription="@string/google_play_icon" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
